--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12133522795" class="contact-link">(+61)490 760 526</a>
+              <a href="tel:+12133522795" class="contact-link">0490 760 526</a>
             </div>
 
           </li>
