--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <section class="about-text">
           <p>
-            I'm Tech Geek from Albury, Australia, working in Cybersecurity and Pentesting. </p>
+            I'm a IT Specialist from Albury, Australia, working in Cybersecurity and Pentesting. </p>
            <p> I enjoy anything tech and love being able to find and solve complex issues .
             
           </p>
