--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-3.png" alt="Amanda Elder" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>****</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Amanda Elder</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    ****
+                    Lee helped me set up my web page and social media accounts. He was extremely professional and knowledgeable throughout the process. He also provided ongoing support which was greatly appreciated. I would highly recommend Lee to any workplace and look forward to working with him again.
                   </p>
                 </div>
 
@@ -336,7 +336,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-1.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>***</h4>
@@ -1126,23 +1126,23 @@ during high-volume rushes whilst working in a team<br>
         
                   <div class="col-md-6">
                     <label style="color:rgb(248, 247, 247)" for="firstName" class="form-label">First Name</label>
-                    <input type="text" class="form-control" name="name" id="firstName" required>
+                    <input type="text" style="color:#ffffff" class="form-control" name="name" id="firstName" required>
                   </div>
                   <div class="col-md-6">
                     <label  style="color:white" for="lastName" class="form-label">Last Name</label>
-                    <input   type="text" class="form-control" name="Last&nbsp;Name" id="lastName" required>
+                    <input   type="text" style="color:#ffffff" class="form-control" name="Last&nbsp;Name" id="lastName" required>
                   </div>
                   <div class="col-md-8">
                     <label style="color:rgb(252, 250, 250)" for="emailInfo" class="form-label">E-mail</label>
-                    <input  type="email" class="form-control" name="email" id="emailInfo" required>
+                    <input  type="email" style="color:#ffffff" class="form-control" name="email" id="emailInfo" required>
                   </div>
                   <div class="col-md-4">
                     <label style="color:rgb(252, 250, 250)" for="phoneNumber" class="form-label">Phone Number</label>
-                    <input   class="form-control" name="phone" id="phoneNumber" placeholder="04----------">
+                    <input   class="form-control" style="color:#ffffff" name="phone" id="phoneNumber" placeholder="04----------">
                   </div>
                   <div class="col-md-12">
-                    <label for="comments" style="color:rgb(236, 230, 230)"  class="form-label">Comments, questions?</label>
-                    <textarea class="form-control" id="comments" name="comments,&nbsp;questions" rows="3" required></textarea>
+                    <label for="comments" style="color:#ffffff"  class="form-label">Comments, questions?</label>
+                    <textarea class="form-control" id="comments" style="color:#ffffff" name="comments,&nbsp;questions" rows="3" required></textarea>
                   </div>
                   <div class="col-md-12">
                     <button class="form-btn">Submit</button>
