fixed submit redirect

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ during high-volume rushes whilst working in a team<br>
                   <!-- Disable Captcha -->
                   <input type="hidden" name="_captcha" value="false">
         
-                  <input type="hidden" name="_next" value="https://haydn5.github.io/formsubmitdemo/success.html" >
+                  <input type="hidden" name="_next" value="https://www.linkedin.com/in/leesheedy/" >
         
                   <div class="col-md-6">
                     <label style="color:rgb(248, 247, 247)" for="firstName" class="form-label">First Name</label>
