Revamp and redone wording of site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lee Sheedy's Site</title>
+  <title>Lee Sheedy's Personal Site</title>
 
   <!--
     - favicon
@@ -197,8 +197,8 @@
 
         <section class="about-text">
           <p>
-            I'm a IT Specialist from Albury, Australia, working in Cybersecurity and Pentesting. </p>
-           <p> I enjoy anything tech and love being able to find and solve complex issues .
+            As a IT Specialist from Albury, Australia, I specialize in cybersecurity and pentesting. I have a passion for technology and enjoy finding and solving complex issues. My expertise in these areas allows me to provide valuable insights and solutions to my clients. <br><br>In my current role,  I work to ensure the security and integrity of my clients' systems,  Whether I am performing a pentest or providing guidance on security best practices, I take pride in my work and strive to deliver the best possible service to my clients.
+            In addition to my expertise in cybersecurity and pentesting, I also have extensive experience in repairing and troubleshooting issues with a wide range of devices and systems. Whether it's a complex network issue or a simple hardware problem, I have the skills and knowledge to quickly diagnose and resolve the issue, ensuring that my clients' systems are always running smoothly. My experience in this area allows me to provide efficient and effective support to my clients, ensuring that they can continue to operate without interruption.
             
           </p>
 
@@ -227,7 +227,7 @@
                 <h4 class="h4 service-item-title">IT Support</h4>
 
                 <p class="service-item-text">
-                  Finding and solving complex issues in IT for high-end customers and businesses. 
+                  I have extensive experience in troubleshooting hardware and software problems, configuring and maintaining computer systems, and providing technical support over the phone or via email. 
                 </p>
               </div>
 
@@ -243,7 +243,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  I have experience in designing the layout and user interface of a website, writing code to power the website or application, and setting up and maintaining the server infrastructure that hosts the website. I am have to ability to understand and use a variety of programming languages and technologies, including HTML, CSS, JavaScript, and databases, which I use to create functional and visually appealing websites.
                 </p>
               </div>
 
@@ -259,7 +259,8 @@
                 <h4 class="h4 service-item-title">Anti-Censorship Curcumvention</h4>
 
                 <p class="service-item-text">
-                  Effectively establishing a network or interface with protections in place for safe use of a service or product 
+                  
+ I have setup secure networks and interfaces that allow for the safe use of services and products within a business or organization whilst working closely with IT teams and other stakeholders. Ensuring  that the necessary security measures are in place and that users have access to the content they need.
                 </p>
               </div>
 
@@ -275,7 +276,7 @@
                 <h4 class="h4 service-item-title">And More!</h4>
 
                 <p class="service-item-text">
-                  I also have experience working on systems such as Windows, Linux, MacOS and NQR. i have the ability learn at a fast pace and am ready to take on anything!
+                  As a professional with experience in a variety of operating systems, including Windows, Linux, MacOS, and NQR, I have proven my ability to quickly adapt and learn new skills. My determination and enthusiasm make me an excellent candidate for any opportunity that comes my way. I am confident in my abilities and am eager to take on new challenges and responsibilities.
                 </p>
               </div>
 
@@ -342,11 +343,11 @@
                   <img src="./assets/images/avatar-2.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>***</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Riya Chandra</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    ****
+                    I can’t thank Moff IT and especially Lee from their team enough. I had a cracked MacBook screen and needed my laptop ASAP as I had an exam the next day and he fixed it for me on the same day and gave me a service to remember. So so happy 😀
                   </p>
                 </div>
 
@@ -434,8 +435,8 @@
             </li>
 
             <li class="clients-item">
-              <a href="https://zmenu.com/jans-cafe-riverwood-nsw-online-menu/">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+              <a href="https://www.quepropertygroup.com.au/">
+                <img src="./assets/images/logo-4-color.png" alt="client logo">
               </a>
             </li>
 
@@ -446,8 +447,8 @@
             </li>
 
             <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-4-color.000" alt="">
+              <a href="https://zmenu.com/jans-cafe-riverwood-nsw-online-menu/"></a>
+              <img src="./assets/images/logo-2-color.png" alt="client logo">
               </a>
             </li>
 
@@ -554,9 +555,10 @@
               <span>2022 — Present</span>
 
               <p class="timeline-text">
-                ⚡ Helped solve sophisticated problems with high-end customers and businesses <br>
-                ⚡ Experience of working with Computers and Other Main Systems (NQR,Mac,Linux,Azure)  <br>                            
-                ⚡ Utilise remote desktop tools such as VNC, TeamViewer and LogMeIn for remote access across all devices.
+                ⚡Successfully solved complex problems for high-end customers and businesses <br>
+                ⚡Proficient in working with NQR, Mac, Linux, and other systems<br>
+                ⚡Experienced in using remote desktop tools such as VNC, TeamViewer, and LogMeIn for remote access across all devices<br>
+                ⚡Proven track record of providing top-notch support and service to clients<br>
               </p>
 
             </li>
