--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
                 <h4 class="h4 service-item-title">IT Support</h4>
 
                 <p class="service-item-text">
-                  I have extensive experience in troubleshooting hardware and software problems, configuring and maintaining computer systems, and providing technical support over the phone or via email. 
-                </p>
+                  I have provided extensive technical support to users over the phone and via email, and have developed strong communication and troubleshooting skills in the process. Overall, my personal experience in these areas has given me a deep understanding of computer systems and the ability to effectively support users with their technical needs.</p>
               </div>
 
             </li>
@@ -260,7 +259,7 @@
 
                 <p class="service-item-text">
                   
- I have setup secure networks and interfaces that allow for the safe use of services and products within a business or organization whilst working closely with IT teams and other stakeholders. Ensuring  that the necessary security measures are in place and that users have access to the content they need.
+ Experienced in setting up  secure networks and interfaces that allow for the safe use of services and products within a business or organization; whilst working closely with IT teams and other stakeholders, Ensuring  that the necessary security measures are in place and that users have access to the content they need.
                 </p>
               </div>
 
@@ -648,7 +647,7 @@ during high-volume rushes whilst working in a team<br>
 
               <div class="title-wrapper">
                 <h5 class="h5">Hardware</h5>
-                <data value="50">50%</data>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
