--- a/privacy.html
+++ b/privacy.html
@@ -179,7 +179,7 @@
 <p>By email: lee@sheedy.tech</p>
 </li>
 <li>
-<p>By visiting this page on our website: <a href="sheedy.tech" rel="external nofollow noopener" target="_blank">sheedy.tech</a></p>
+<p>By visiting this page on our website: <a href="/assets/images/470ECC71-30A2-4D2C-AF4D-E7A17DF9E959.jpeg" rel="external nofollow noopener" target="_blank">sheedy.tech</a></p>
 </li>
 <li>
 <p>By phone number: 0490760526</p>
